Correct color for modal scrollbar

--- a/src/common/Modal/components/ModalContent/css/index.scoped.css
+++ b/src/common/Modal/components/ModalContent/css/index.scoped.css
@@ -15,7 +15,7 @@
 }
 
 .content::-webkit-scrollbar-track {
-  background: var(--background);
+  background: var(--modal-body-bg);
 }
 
 .content::-webkit-scrollbar-thumb {
